Update our logic to delete a category recursively